# Avoid-MPC

./: .clang-format  .gitignore  README.md
roswrapper/MavLinkCom/include/: MavLinkMessages.hpp
roswrapper/MavLinkCom/src/: MavLinkMessages.cpp
roswrapper/cmake/cmake-modules/: CommonSetup.cmake
roswrapper/ros/src/airsim_ros_pkgs/: CMakeLists.txt
roswrapper/ros/src/airsim_ros_pkgs/include/: airsim_ros_wrapper.h
roswrapper/ros/src/airsim_ros_pkgs/launch/: airsim_node.launch
roswrapper/ros/src/airsim_ros_pkgs/src/: airsim_node.cpp  airsim_ros_wrapper.cpp  airsim_settings_parser.cpp
roswrapper/ros/src/avd_mpc/: CMakeLists.txt  package.xml
roswrapper/ros/src/avd_mpc/config/: mpc_parameters.yaml  rviz_obstacle_sim.rviz
roswrapper/ros/src/avd_mpc/include/: AvoidanceStateMachine.h  FrameKDMap.h  HighLvlMpc.h  ParameterManager.h  kd_tree_two.h  nanoflann_two.hpp
roswrapper/ros/src/avd_mpc/src/: COGFilter.cpp  HighLvlMpc.cpp  ParameterManager.cpp  mpc_obstacle_avoidance_node.cpp
roswrapper/ros/src/avoid_mpc/cmake/: FindCasadi.cmake
roswrapper/ros/src/avoid_mpc/config/: bfctrl_config.yaml
roswrapper/ros/src/avoid_mpc/include/: COGFilter.h
roswrapper/ros/src/avoid_mpc/launch/: mpc_obstacle_avoidance_sim.launch
roswrapper/ros/src/avoid_mpc/src/: AvoidanceStateMachine.cpp  FrameKDMap.cpp
roswrapper/ros/src/avoid_mpc/tools/: mpc_obstacle_casadi.py
roswrapper/ros/src/betaflight_ctrl/: .gitignore
roswrapper/ros/src/betaflight_ctrl/betaflight_ctrl/: CMakeLists.txt  package.xml
roswrapper/ros/src/betaflight_ctrl/betaflight_ctrl/config/: ctrl_param_fpv_real.yaml
roswrapper/ros/src/betaflight_ctrl/betaflight_ctrl/launch/: run_ctrl_airsim.launch
roswrapper/ros/src/betaflight_ctrl/betaflight_ctrl/script/: bag_record.py  odom2pose.py
roswrapper/ros/src/betaflight_ctrl/betaflight_ctrl/src/: BfCtrlFSM.cpp  BfCtrlFSM.h  BfCtrlParam.cpp  BfCtrlParam.h  bfctrl_node.cpp  controller.cpp  controller.h  input.cpp  input.h
roswrapper/ros/src/betaflight_ctrl/quadrotor_msgs/: CMakeLists.txt
roswrapper/ros/src/betaflight_ctrl/quadrotor_msgs/msg/: BfctrlStatue.msg  Command.msg  SlowDown.msg  TakeoffLand.msg
roswrapper/ros/src/betaflight_ctrl/uav_utils/include/uav_utils/: converters.h
